fixed styling when logged out on small screens

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,7 @@
 .nav-head{
   font-size: 32px;
   width: 100%;
+  display: flex;
   height: 90px;
   padding: 4px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.13), 0 3px 10px 0 rgba(0, 0, 0, 0.11);
